--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Snake Game Javascript</title>
   <link rel="stylesheet" href="styles.css" />
+  <script src="scripts.js" defer></script>
  </head>
  <body>
   <div class="wrapper">
@@ -15,6 +16,5 @@
    </div>
    <div class="play-board"></div>
   </div>
-  <script src="scripts.js"></script>
  </body>
 </html>
