--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Snake Game Javascript</title>
   <link rel="stylesheet" href="styles.css" />
+  <link
+   rel="stylesheet"
+   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+   integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+   crossorigin="anonymous"
+   referrerpolicy="no-referrer"
+  />
   <script src="scripts.js" defer></script>
  </head>
  <body>
@@ -15,7 +22,12 @@
     <span class="high-score">High Score: 30</span>
    </div>
    <div class="play-board"></div>
-   <div class="controls"></div>
+   <div class="controls">
+    <i data-key="ArrowLeft" class="fa-solid fa-arrow-left-long"></i>
+    <i data-key="ArrowUp" class="fa-solid fa-arrow-up-long"></i>
+    <i data-key="ArrowRight" class="fa-solid fa-arrow-right-long"></i>
+    <i data-key="ArrowDown" class="fa-solid fa-arrow-down-long"></i>
+   </div>
   </div>
  </body>
 </html>
